# RAII-file

./: CMakeLists.txt  README.md
examples/: example1.cpp  example2.cpp  example3.cpp
src/: raii_file.cpp  raii_file.hpp
test_files/: 1.txt  2.txt
